fix: mobile z-index fix

--- a/components/Home/index.module.scss
+++ b/components/Home/index.module.scss
@@ -6,20 +6,15 @@
 
 .image_container {
   position: absolute;
+  display: none;
   background-size: 100% 100%;
   height: 100%;
   width: 100%;
 }
 
 .not_available_on_phone {
-  background-color: #c73e1d;
-  background-image: linear-gradient(
-    315deg,
-    #c73e1d 0%,
-    #a23b72 37%,
-    #2e86ab 100%
-  );
   display: flex;
+  background: var(--main-background);
   flex: 1;
   min-height: 100vh;
   flex-direction: column;
@@ -27,7 +22,7 @@
   align-items: center;
 
   .h1 {
-    color: darkorange;
+    color: #ff013c;
     flex: 0.1;
   }
 
@@ -109,6 +104,10 @@
 }
 
 @include b.breakpoint(desktop) {
+  .image_container {
+    display: flex;
+  }
+
   .not_available_on_phone {
     display: none;
   }
